docs/pages/versions/v55.0.0/sdk/audio.mdx
---
title: 音频（expo-audio）
description: 一个提供 API 用于在应用中实现音频播放和录制的库。
sourceCodeUrl: 'https://github.com/expo/expo/tree/main/packages/expo-audio'
packageName: 'expo-audio'
iconUrl: '/static/images/packages/expo-av.png'
platforms: ['android', 'ios', 'web', 'tvos', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import {
  ConfigPluginExample,
  ConfigPluginProperties,
  ConfigReactNative,
} from '~/ui/components/ConfigSection';
import { SnackInline } from '~/ui/components/Snippet';
import { PlatformTags } from '~/ui/components/Tag/PlatformTags';

`expo-audio` 是一个跨平台音频库，用于访问设备的原生音频能力。

[Android 媒体格式支持文档](https://developer.android.com/media/media3/exoplayer/supported-formats)涵盖了在 Android 上使用 Expo Player 时支持的格式。[iOS 音频和视频格式文档](https://developer.apple.com/documentation/coreaudiotypes/audio-format-identifiers)列出了 Apple 设备支持的媒体格式。

请注意，如果耳机/Bluetooth 音频设备断开连接，音频会自动停止。

## 安装

<APIInstallSection />

## 在 app config 中配置

如果你在项目中使用 config plugins（[Continuous Native Generation (CNG)](/workflow/continuous-native-generation/)），可以使用 `expo-audio` 内置的 [config plugin](/config-plugins/introduction/) 进行配置。该插件允许你配置一些无法在运行时设置、且需要重新构建新的应用二进制文件才会生效的属性。如果你的应用**不**使用 CNG，那么你需要手动配置该库。

<ConfigPluginExample>

```json app.json
{
  "expo": {
    "plugins": [
      [
        "expo-audio",
        {
          "microphonePermission": "允许 $(PRODUCT_NAME) 访问你的麦克风。",
          "enableBackgroundPlayback": true,
          "enableBackgroundRecording": false
        }
      ]
    ]
  }
}
```

</ConfigPluginExample>

<ConfigPluginProperties
  properties={[
    {
      name: 'microphonePermission',
      platform: 'ios',
      description:
        '用于设置 `NSMicrophoneUsageDescription` 权限消息的字符串。将其设为 `false` 会禁用该权限。',
      default: '"允许 $(PRODUCT_NAME) 访问你的麦克风"',
    },
    {
      name: 'recordAudioAndroid',
      platform: 'android',
      description:
        '一个布尔值，用于决定是否在 Android 上启用 `RECORD_AUDIO` 权限。',
      default: 'true',
    },
    {
      name: 'enableBackgroundRecording',
      description:
        '一个布尔值，用于决定是否启用后台音频录制。在 Android 上，这会添加录制前台服务和权限，并在录制期间显示一条持续存在的通知。在 iOS 上，这会添加 `audio` 后台模式。**注意：**后台录制可能会显著影响电池续航。',
      default: 'false',
    },
    {
      name: 'enableBackgroundPlayback',
      description:
        '一个布尔值，用于决定是否启用后台音频播放。在 Android 上，这会添加媒体播放前台服务，并允许你显示锁屏控制，这是持续后台播放所必需的。在 iOS 上，这会添加 `audio` 后台模式。',
      default: 'true',
    },
  ]}
/>

## 用法

### 播放声音

<SnackInline
  label='播放声音'
  dependencies={['expo-audio', 'expo-asset']}
  files={{
    'assets/Hello.mp3': 'https://snack-code-uploads.s3.us-west-1.amazonaws.com/~asset/c9c43b458d6daa9771a7287cae9f5b47'
  }}
>

```jsx
import { View, StyleSheet, Button } from 'react-native';
import { useAudioPlayer } from 'expo-audio';

const audioSource = require('./assets/Hello.mp3');

export default function App() {
  const player = useAudioPlayer(audioSource);

  return (
    <View style={styles.container}>
      <Button title="播放声音" onPress={() => player.play()} />
      <Button
        title="重新播放声音"
        onPress={() => {
          player.seekTo(0);
          player.play();
        }}
      />
    </View>
  );
}

const styles = StyleSheet.create({
  container: {
    flex: 1,
    justifyContent: 'center',
    backgroundColor: '#ecf0f1',
    padding: 10,
  },
});
```

</SnackInline>

### 录制声音

<SnackInline label='录制声音' dependencies={['expo-audio', 'expo-asset']}>

```jsx
import { useState, useEffect } from 'react';
import { View, StyleSheet, Button } from 'react-native';
import {
  useAudioRecorder,
  AudioModule,
  RecordingPresets,
  setAudioModeAsync,
  useAudioRecorderState,
} from 'expo-audio';

export default function App() {
  const audioRecorder = useAudioRecorder(RecordingPresets.HIGH_QUALITY);
  const recorderState = useAudioRecorderState(audioRecorder);

  const record = async () => {
    await audioRecorder.prepareToRecordAsync();
    audioRecorder.record();
  };

  const stopRecording = async () => {
    // 录音文件将可通过 `audioRecorder.uri` 获取。
    await audioRecorder.stop();
  };

  useEffect(() => {
    (async () => {
      const status = await AudioModule.requestRecordingPermissionsAsync();
      if (!status.granted) {
        Alert.alert('访问麦克风的权限被拒绝');
      }

      setAudioModeAsync({
        playsInSilentMode: true,
        allowsRecording: true,
      });
    })();
  }, []);

  return (
    <View style={styles.container}>
      <Button
        title={recorderState.isRecording ? '停止录音' : '开始录音'}
        onPress={recorderState.isRecording ? stopRecording : record}
      />
    </View>
  );
}

const styles = StyleSheet.create({
  container: {
    flex: 1,
    justifyContent: 'center',
    backgroundColor: '#ecf0f1',
    padding: 10,
  },
});
```

</SnackInline>

### 在后台播放音频

后台音频播放允许你的应用在进入后台或设备屏幕锁定时继续播放音频。

#### 配置

要启用后台音频播放，请在你的 [app config](/workflow/configuration/) 中使用 config plugin：

```json app.json
{
  "expo": {
    "plugins": [
      [
        "expo-audio",
        {
          "enableBackgroundPlayback": true
        }
      ]
    ]
  }
}
```

上述配置会自动配置所需的原生设置：

- <PlatformTags platforms={['android']} /> 添加 `FOREGROUND_SERVICE` 和
  `FOREGROUND_SERVICE_MEDIA_PLAYBACK` 权限。同时在应用的 **AndroidManifest.xml** 中声明一个媒体播放前台服务
  (`AudioControlsService`)。
- <PlatformTags platforms={['ios']} /> 添加 `audio` `UIBackgroundMode` 能力

#### 用法

在使用 config plugin 配置完应用后，你需要：

1. **配置音频会话** 以允许后台播放
2. **启用锁屏控制**（在 Android 上持续后台播放是必需的）

```jsx
import { View, Button } from 'react-native';
import { useAudioPlayer, setAudioModeAsync } from 'expo-audio';
import { useEffect } from 'react';

export default function AudioPlayerScreen() {
  const audioSource = require('./assets/audio.mp3');
  const player = useAudioPlayer(audioSource);

  useEffect(() => {
    // 为后台播放配置音频会话
    setAudioModeAsync({
      playsInSilentMode: true,
      shouldPlayInBackground: true,
      interruptionMode: 'doNotMix',
    });
  }, []);

  const handlePlay = () => {
    // 使用元数据启用锁屏控制
    player.setActiveForLockScreen(true, {
      title: '我的音频标题',
      artist: '艺人名称',
      albumTitle: '专辑名称',
      artworkUrl: 'https://example.com/artwork.jpg', // 可选
    });

    // 开始播放 - 这将继续在后台运行
    player.play();
  };

  const handleStop = () => {
    player.pause();
    // 可选：完成后禁用锁屏控制
    player.setActiveForLockScreen(false);
  };

  return (
    <View>
      <Button title="播放" onPress={handlePlay} />
      <Button title="停止" onPress={handleStop} />
    </View>
  );
}
```

<PlatformTags platforms={['android']} />

> **注意**：在 Android 上，你必须使用 [`setActiveForLockScreen`](#setactiveforlockscreenactive-metadata-options) 启用锁屏控制，才能实现持续后台播放。否则，音频将在大约 3 分钟的后台播放后停止（这是操作系统限制）。请确保正确地[配置 config plugin](#configuration-in-app-config)。

- 通知栏中会出现带有播放控制的媒体通知
- 音频会在后台无限期播放
- 用户可以通过锁屏和通知控制播放
- 前台服务会在播放期间保持播放进程存活

<PlatformTags platforms={['ios']} />

在 iOS 上，一旦音频会话配置为 `shouldPlayInBackground: true`，音频播放就会在后台无缝继续。锁屏控制是可选的，但它们通过在锁屏和控制中心提供播放控制来提升用户体验。

<ConfigReactNative>

如果你没有使用 Continuous Native Generation（[CNG](/workflow/continuous-native-generation/)）（也就是你在手动使用原生 **android** 和 **ios** 项目），那么你需要为后台播放配置以下内容：

- 对于 Android，添加到 **android/app/src/main/AndroidManifest.xml**：

  ```xml android/app/src/main/AndroidManifest.xml
  <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
  <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK" />

  <application>
    <!-- 其他应用组件 -->
    <service
      android:name="expo.modules.audio.service.AudioControlsService"
      android:exported="false"
      android:foregroundServiceType="mediaPlayback">
      <intent-filter>
        <action android:name="androidx.media3.session.MediaSessionService" />
      </intent-filter>
    </service>
  </application>
  ```

- 对于 iOS，添加到 **ios/YourApp/Info.plist**：

  ```xml ios/YourApp/Info.plist
  <key>UIBackgroundModes</key>
  <array>
    <string>audio</string>
  </array>
  ```

</ConfigReactNative>

### 在后台录制音频

> **警告** 后台录制可能会显著影响电池续航。仅在你的应用功能确实需要时才启用它。

后台音频录制允许你的应用在进入后台或设备屏幕锁定时继续录制。

要启用后台录制，请在你的 [app config](/workflow/configuration/) 中使用 config plugin：

```json app.json
{
  "expo": {
    "plugins": [
      [
        "expo-audio",
        {
          "microphonePermission": "允许 $(PRODUCT_NAME) 录制音频。",
          "enableBackgroundRecording": true
        }
      ]
    ]
  }
}
```

上述配置会自动配置所需的原生设置：

- <PlatformTags platforms={['android']} /> 添加 `FOREGROUND_SERVICE`,
  `FOREGROUND_SERVICE_MICROPHONE` 和 `POST_NOTIFICATIONS` 权限。同时在应用的 **AndroidManifest.xml** 中声明一个音频
  录制前台服务。
- <PlatformTags platforms={['ios']} /> 添加 `audio` `UIBackgroundMode` 能力

<ConfigReactNative>

如果你没有使用 Continuous Native Generation（[CNG](/workflow/continuous-native-generation/)）（也就是你在手动使用原生 **android** 和 **ios** 项目），那么你需要在原生项目中配置以下权限：

- 对于 Android，添加到 **android/app/src/main/AndroidManifest.xml**：

  ```xml android/app/src/main/AndroidManifest.xml
  <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MICROPHONE" />
  <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
  ```

- 对于 iOS，添加到 **ios/YourApp/Info.plist**：

  ```xml ios/YourApp/Info.plist
  <key>UIBackgroundModes</key>
  <array>
    <string>audio</string>
  </array>
  ```

</ConfigReactNative>

#### 用法

配置完应用后，可在运行时使用 [`setAudioModeAsync`](#audiosetaudiomodeasyncmode) 启用后台录制：

```jsx
import { setAudioModeAsync, useAudioRecorder, RecordingPresets } from 'expo-audio';

await setAudioModeAsync({
  playsInSilentMode: true,
  allowsRecording: true,
  allowsBackgroundRecording: true,
});

const recorder = useAudioRecorder(RecordingPresets.HIGH_QUALITY);
await recorder.prepareToRecordAsync();
await recorder.record();

// 录音会在后台继续
```

<PlatformTags platforms={['android']} />

在 Android 上，后台录制需要前台服务，它会显示一条带有“正在录制音频”文本和停止按钮的持续通知。录制进行时，这条通知无法被关闭，录制停止后会自动消失。

<PlatformTags platforms={['ios']} />

在 iOS 上，当应用处于后台或屏幕锁定时，后台录制会无缝继续。除系统状态栏之外，不会向应用用户显示任何额外通知或指示。

### 直接使用 AudioPlayer

在大多数情况下，请使用 [`useAudioPlayer`](#useaudioplayersource-options) 钩子来创建 `AudioPlayer` 实例。它会管理播放器的生命周期，并在组件卸载时确保正确释放。不过，在某些高级用例中，你可能需要创建一个超出组件生命周期仍然存在的 `AudioPlayer`。
在这种情况下，请使用 [`createAudioPlayer`](#audiocreateaudioplayersource-options) 函数。你需要了解这种方式带来的风险，因为当播放器不再需要时，调用 [`release()`](../sdk/expo/#release) 方法是你的责任。如果处理不当，这种方式可能导致内存泄漏。

```tsx
import { createAudioPlayer } from 'expo-audio';
const player = createAudioPlayer(audioSource);
```

### Web 使用说明

- Chrome 上的一个 MediaRecorder 问题会生成缺少时长元数据的 WebM 文件。[查看公开的 Chromium 问题](https://bugs.chromium.org/p/chromium/issues/detail?id=642012)。
- MediaRecorder 的编码选项和其他配置在不同浏览器之间并不一致。在你的应用中使用诸如 [kbumsik/opus-media-recorder](https://github.com/kbumsik/opus-media-recorder) 或 [ai/audio-recorder-polyfill](https://github.com/ai/audio-recorder-polyfill) 这样的 polyfill 会改善你的体验。传递给 `prepareToRecordAsync` 的任何选项都会直接传递给 MediaRecorder API，因此也会传递给 polyfill。
- Web 浏览器要求站点必须通过安全方式提供，才能监听麦克风。更多详情请参见 [MediaDevices `getUserMedia()` security](https://developer.mozilla.org/en-US/docs/Web/API/MediaDevices/getUserMedia#security)。

## API

```js
import { useAudioPlayer, useAudioRecorder } from 'expo-audio';
```

<APISection packageName="expo-audio" apiName="Audio" />
